# eureka

backend/: .env  .env.example  README.md  pyproject.toml
backend/src/: config.py
backend/src/agent/: doc_generator.py  embedder.py  intent_router.py  memory_manager.py  rag_chain.py
backend/src/api/: dependencies.py  exception_handlers.py  main.py
backend/src/api/v1/: router.py
backend/src/api/v1/routes/: chat.py  documents.py
backend/src/db/: qdrant.py  supabase.py
backend/src/db/migrations/: 001_initial.sql
backend/src/domain/: errors.py  models.py  schemas.py
backend/src/ingestion/: ingest.py
backend/tests/: conftest.py
backend/tests/unit/: test_intent_router.py
frontend/: README.md  index.html
frontend/src/: main.js
frontend/styles/: main.css
